Sun May 21 20:51:44 2000  Christopher Faylor <cgf@cygnus.com>

	* dcrt0.cc (dll_crt0_1): Move uinfo_init call to before sigproc_init to
	avoid a race.
	(noload): Add an extra argument for debugging.
	* uinfo.cc (uinfo_init): Eliminate test for multiple calls.
	(getlogin): Assume that uinfo_init has already been called.

Sat May 20 01:34:57 2000  Christopher Faylor <cgf@cygnus.com>

	* exceptions.cc (interruptible): Add an argument to control whether
	function just checks for validity.  Flag module handle == 0 as
	noninterrupible.
	(call_handler): Always acquire and release ebp lock.  Loop for only a
	fixed amount of time attempting to grab mutos and find an interruptible
	PC.

2000-05-19  DJ Delorie  <dj@cygnus.com>

	* syscalls.cc (setmode): change mode of any matching FILE* also.

Thu May 18 17:28:19 2000  Christopher Faylor <cgf@cygnus.com>

	* Makefile.in: Remove external.h dependency.
	* dcrt0.cc (sigthread::init): Move here from sigproc.h.
	* sigproc.h (sigthread): Move init to dcrt0.cc.

Thu May 18 01:28:02 2000  Christopher Faylor <cgf@cygnus.com>

	* select.cc (thread_pipe): Add paranoid check to ensure thread
	termination.
	* external.cc: Eliminate obsolete include.
	* getopt.c (getopt_long): Fix compiler warning.
	* shared.h: Moved PID_ definitions to include/sys/cygwin so that they
	can be used by external programs.
	* include/sys/cygwin.h: Move external definitions here.  Include
	sys/resource.h to avoid having to do this everywhere.

Thu May 18 01:04:02 2000  Christopher Faylor <cgf@cygnus.com>

	* sigproc.h (sigframe): Don't set frame info unless tid matches this
	thread id.

Wed May 17 23:13:32 2000  Christopher Faylor <cgf@cygnus.com>

	* dcrt0.cc (dll_crt0_1): Initialize mainthread stuff here before
	anything needs it.
	* sigproc.cc (sigproc_init): Move mainthread initialization out of
	here.
	* sigproc.h (sigthread): Add init() method.
	(sigframe): Don't try to initialize muto.
	* sync.cc: Undef WaitForSingleObject to avoid recursion.
